feat(permission): Allow access to parent level infos using LIST acl
The LIST acl allows to retrieve list of entities with only basic information while READ acl allows access to all information about a specified entity.

Closes gravitee-io/issues#3388